2014-08-08  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Eliminated palette and depth optimization (see
	https://sourceforge.net/p/graphicsmagick/feature-requests/35/).

2014-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* dcraw/dcraw.c: Fix dcraw build for x64 target when only WIN64 is
	defined (by also defining WIN32).

	* VisualMagick/configure/configure.cpp (write_file): Fix problem
	with x64 project naming which caused object file disambiguation
	not to work for x64 target. Make line terminations consistent.

2014-08-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick: VisualMagick fixes by Dirk Lemstra to improve
	configure program so that it is possible to select QuantumDepth,
	OpenMP, and 64-bit build via configure dialog boxes as well as
	options on the command line.  Also automatically detects and deals
	with similarly named files in subdirectories so that WebP support
	can now build successfully.  Resolves SF patches 31, 33, 35, 37,
	and 38.

2014-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTResourceToBlob): Support loading mgk files
	as Windows resource from library if MagickLibName is defined.
	Patch contributed by Dirk Lemstra via SF patch #32.
	(NTGhostscriptDLL): For Microsoft Windows, add support for a
	MAGICK_GHOSTSCRIPT_PATH environment variable which specifies the
	path to Ghostscript.  If this environment variable is defined,
	then the Windows registry is not used to find Ghostscript.  Patch
	contributed by Dirk Lemstra via SF patch #39.

	* magick/log.c: Added SetLogMethod() to allow an
	application/library to specify a function to be called for
	logging.  Patch contributed by Dirk Lemstra.

2014-07-20  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/bmp.c: "opacity" read from a BMP3 is actually "alpha",
	so store q->opacity=MaxRGB-opacity instead of q->opacity=opacity.
	Reference: Bug tracker [bugs:#271] Blank result for BMP resize.
